made requested changes 2.0